# aura-synth-firmware

./: .gitignore  CMakeLists.txt  Makefile  PINOUT.md  convert_sample.py  partitions.csv  sdkconfig  sdkconfig.defaults
Lennarts_code_base/Lens_sensors/: CMakeLists.txt  README.md  partitions.csv  sdkconfig
Lennarts_code_base/Lens_sensors/components/vl53l0x/inc/: VL53L0X.h
Lennarts_code_base/Lens_sensors/main/: CMakeLists.txt  idf_component.yml  main.cpp
components/vl53l0x/: CMakeLists.txt
components/vl53l0x/api/core/src/: vl53l0x_api_core.c
crowpanel_display/: CMakeLists.txt  README.md  sdkconfig.defaults
crowpanel_display/main/: CMakeLists.txt  crowpanel_gui.c  crowpanel_gui.h  idf_component.yml  main.c
main/: CMakeLists.txt  audio_block.c  audio_block.h  audio_scope.c  audio_scope.h  audio_task.c  audio_task.h  effects.c  effects.h  i2s_output.c  i2s_output.h  idf_component.yml  led_task.cpp  led_task.h  loop_recorder.c  loop_recorder.h  main.c  mixer.c  mixer.h  panel_input.c  panel_input.h  sampler.c  sampler.h  sensor_task.cpp  sensor_task.h  shared_state.c  shared_state.h  synth_voice.c  synth_voice.h  telemetry_uart.c  telemetry_uart.h
